2019-01-17  Karl Berry  <karl@freefriends.org>

	* capdata-unify.pl (lists_unify): count unifications used.
	(unify_dump_count): output unused unifications.
	* capaccum.pl (accumulation_check): call it.
	* lists-unifications.txt: remove unused unifications.

2019-01-13  Karl Berry  <karl@freefriends.org>

	* capdata-xlate.pl (xlate_dump_count): try and reject showing
	unused html->txt translations, since there are lots; distinguish
	tex->html from html->txt.
	* lists-regexps.txt (\smc),
	* lists-translations.txt (\SMC, many more): remove
	some of the translations used only once, for speedup (minor)
	and cleanliness (also minor).
	* tb<many>capsule.txt: adjust to use \acro and other commonalities.

2019-01-11  Karl Berry  <karl@freefriends.org>

	* article-2011.ltx,
	* article-2019.ltx: add TUGboat article sources past and present.

2019-01-10  Karl Berry  <karl@freefriends.org>

	* tb31capsule.txt: don't use \aand for review authors,
	so we can drop the translations entry.
	* lists-translations.txt (Bencze, \`\i , \aand, \and, \cand):
	drop unused entries.
	* capaccule.pl (accumulation_check): reenable xlate_dump_count.

2019-01-09  Karl Berry  <karl@freefriends.org>

	* capaccum.pl (accumulation): record all categories and difficulties.
	(accumulation_check): rename from accumulation_more, reenable checks.
	(accumulation_check1): rename from accumulation_check.

2019-01-07  Karl Berry  <karl@freefriends.org>

	* capaccum.tex: doc fix, we do need to remove &.
	* lists-regexps.txt: doc fox, xr-hyper handled ok.
	* tb78capsule.txt (Bujdoso), 
	* lists-unifications.txt (Bujdoso): add accents.
	(Cheswick): duplicated.
	(Damerell): not needed.
	* tb14capsule.txt,
	* tb16capsule.txt, 
	* tb35capsule.txt (R.M. Damerell): no space.
	
2018-12-25  Karl Berry  <karl@tug.org>

	* capout.pl (write_issue): output lists links on every toc page.

	* capaccum-util.pl (lists_entry_trailer): omit subtitles for any
		"Reviews".

2018-12-25  Karl Berry  <karl@freefriends.org>
