@@ -1,7 +1,6 @@
 $Id$
 
 xxxx ending page numbers not always present; synthesize?
-xxxx count regexps too, no lists-* left unused
 
 TUGboat capsules processing. Public domain.
 Originally written 2017 Karl Berry.
@@ -27,6 +26,8 @@ lists-unifications  different category/author/title forms to be combined.
 Consider "todo:" items.
 
 
+18jan19 count regexps, remove unused and used only once.
+
 17jan19 remove unused unifications.
 
 16jan19 count unifications.
