@@ -249,7 +249,7 @@ access</a>.
   {{New printings of \textsl{Computers \& Typesetting}};\\
 {Three printing-related symposia};\\
 {An open source font from Adobe: Source~Sans~Pro};\\
-{Errata: \TUB\ \textbf{33}:1 and \textbf{33}:2}}
+{Errata: \TUB\ {\bf 33}:1 and {\bf 33}:2}}
   {}
 
 %\capsule{Introductory}
