@@ -367,7 +367,7 @@ access</a>.
 \capsule{}
   {Futures}
   {Luigi Scarso}
-  {{\manual MF}Lua\ 0.8 \Dash Prologue}
+  {MFLua\ 0.8 \Dash Prologue}
   {philosophical reflections on society and the \TeX\ software family}
   {141-144}
   {/TUGboat/!TBIDENT!scarso.pdf}
