@@ -361,7 +361,7 @@ issue as one pdf</a> (18mb).
 \capsule{Intermediate Plus}
   {Talks}%replace|Humanities
   {David Kastrup}
-  {The \t{bigfoot} bundle for critical editions}
+  {The {\tt bigfoot} bundle for critical editions}
   {}
   {199}
   {/TUGboat/tb27-0/kastrup-bigfoot.pdf}
